--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </section>
 
     <section>
-      <h2>Document PDF</h2>
+      <h2>PRESENTATION</h2>
       <iframe src="presentation.pdf" width="100%" height="400" style="border:none; border-radius:12px;"></iframe>
       <br />
       <a class="pdf-button" href="presentation.pdf" target="_blank">📄 Voir / Télécharger le PDF</a>
@@ -219,3 +219,4 @@
   </footer>
 </body>
 </html>
+
