--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
       <h2>QUI SOMMES NOUS</h2>
       <a href="#">AigleVente.com est une plateforme moderne qui facilite l’achat et la vente en ligne. Simple, rapide et sécurisée, elle permet à tous — particuliers comme professionnels — de publier, rechercher et conclure des transactions facilement. Un site clair, pratique et accessible sur ordinateur comme sur mobile.
 </a>
+		<p>
+  <a href="https://aiglevente.com/" target="_blank">Cliquer ici pour visiter le site</a>
+</p>
+
 
     </section>
 
@@ -219,4 +223,5 @@
   </footer>
 </body>
 </html>
+
 
