--- a/index.html
+++ b/index.html
@@ -182,13 +182,12 @@
   <main>
     <section class="projects">
       <h2>QUI SOMMES NOUS</h2>
-      <a href="#">AigleVente.com est une plateforme moderne qui facilite l’achat et la vente en ligne. Simple, rapide et sécurisée, elle permet à tous — particuliers comme professionnels — de publier, rechercher et conclure des transactions facilement. Un site clair, pratique et accessible sur ordinateur comme sur mobile.
+<a href="https://aiglevente.com/" target="_blank">
+  AigleVente.com est une plateforme moderne qui facilite l’achat et la vente en ligne. 
+  Simple, rapide et sécurisée, elle permet à tous — particuliers comme professionnels — 
+  de publier, rechercher et conclure des transactions facilement. 
+  Un site clair, pratique et accessible sur ordinateur comme sur mobile.
 </a>
-		<p>
-  <a href="https://aiglevente.com/" target="_blank">Cliquer ici pour visiter le site</a>
-</p>
-
-
     </section>
 
     <section>
@@ -223,5 +222,6 @@
   </footer>
 </body>
 </html>
+
 
 
