--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@
       header h1 { font-size: 2rem; }
       main { padding: 1rem; }
     }
+	  .btn-visit {
+  display: inline-block;
+  padding: 12px 25px;
+  background-color: #1a73e8; /* bleu doux */
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 8px;
+  transition: background-color 0.3s;
+}
+
+.btn-visit:hover {
+  background-color: #155ab6; /* bleu plus foncé au survol */
+}
+
   </style>
 </head>
 <body>
@@ -182,12 +197,16 @@
   <main>
     <section class="projects">
       <h2>QUI SOMMES NOUS</h2>
-<a href="https://aiglevente.com/" target="_blank">
+<a>
   AigleVente.com est une plateforme moderne qui facilite l’achat et la vente en ligne. 
   Simple, rapide et sécurisée, elle permet à tous — particuliers comme professionnels — 
   de publier, rechercher et conclure des transactions facilement. 
   Un site clair, pratique et accessible sur ordinateur comme sur mobile.
 </a>
+		<a href="https://www.aiglevente.com" target="_blank" class="btn-visit">
+  Visiter AigleVente.com
+</a>
+
     </section>
 
     <section>
@@ -222,6 +241,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
