--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   Un site clair, pratique et accessible sur ordinateur comme sur mobile.
 </a>
 		<a href="https://www.aiglevente.com" target="_blank" class="btn-visit">
-  Visiter AigleVente.com
+  Visiter le site
 </a>
 
     </section>
@@ -241,6 +241,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
